Fixed FELIX-4732 : Web Console event plugin is not compatible with OSGi/Minimum EE https://issues.apache.org/jira/browse/FELIX-4732
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1645886 13f79535-47bb-0310-9956-ffa450edef68